lagt til første versjon av håndtering av tilgangskontroll for dokumenter eller vedlegg i integrasjon mot saf